testcases/error/unassign_variable_struct.veryl
module unassign_variable_struct (
    o: output logic,
) {
    struct StructA {
        x: logic,
        y: logic,
    }

    var a: StructA;

    assign a.x = 0;
    // Read a.y so the unassigned field is not treated as dead.
    assign o   = a.y;
}
